2003-07-02  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * setup.py is again effective on un*x (takes into account the
        addon of the jpeg library)
      * Doc/DoxyDevelInstal.txt added (developper's raw documentation)
      * Doc/Doxy* updated (includes above enhancements)
      * INSTALL now points to web documentation

2003-07-01  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h doesn't make unnecessary reference to
        gdcmUtil.h anymore.
      * gdcmPython/Makefile.am now avoids calling the wrappers for the
        clean target.
      * src/gdcm*.[cxx|h] :
        - to allow compilation with gcc 3.x
          -- clean up of STL usage (added explicit usage of std::)
          -- small fixes on exceptions.
          Note: linking not tested !
        - clean of doxygen comments to avoid warnings at documentation
          building stage.
      * vtk/vtkGdcmReader.cxx: g++ warning message clean up (platform
        dependent convertion).

2003-06-20  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Clean up of previous JPR garbage commit (not even commented in the
        Changelog):
        - Test/Makefile.am removed the reference to unexisting testTS.cxx
        - moved all jpeg related files from src to src/jpeg/libijg8, with
          addition/modification of Makefile.am and configure.in.
        - the testSuite is still brain damage (not guilty).

2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * WrapVTK.py : modifications to get correctly vtk source files to 
        compile
      * vtk/vtkGdcmReader.cxx : modification for an already existing name
        (FileName -> Filename)

2003-06-11  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.[cxx/h]:
        - UpdateProgress method should now be effective
        - removed the limitation on having only images loaded (as opposed
          to volumes),
        - when building a stack of images/volume, a lesser number of